--- a/style.css
+++ b/style.css
@@ -1,80 +1,96 @@
-
 body {
-    background-color: beige;
+	background-color: beige;
 }
 
 main {
-    
 }
 
-
 header {
-    font-size: 60px;
-    color: black;
-    font-family: bold;
+	font-size: 60px;
+	color: black;
+	font-family: bold;
 }
 
 p {
-    font-size: 30px;
-    color: black;
+	font-size: 30px;
+	color: black;
 }
 
 #displaychoice {
-    display: flex;
+	display: flex;
 }
-#playerdisplay, #cpudisplay {
-    font-size: 40px;
-    background-color: black;
-    color: yellow;
-    width: 20%;
-    border: solid yellow 1px;
-    margin-bottom: 25px;
-    
-    
+#playerdisplay,
+#cpudisplay {
+	font-size: 40px;
+	background-color: black;
+	color: yellow;
+	width: 20%;
+	border: solid yellow 1px;
+	margin-bottom: 25px;
 }
 
 #rock {
-background-image: url (".rock.png"); 
-    
+	background-image: url ('.rock.png');
 }
 .rock {
-    background-image: url ('./assets/rock.png');
+	background-image: url ('./assets/rock.png');
 }
 
 input[type='radio'] + rock {
-    background-image: url ('./assets/rock2.png');
+	background-image: url ('./assets/rock2.png');
 }
 
 #displayresults {
-    font-size: 70px;
-    background-color: black;
-    color: red;
-    width: 20%;
-    border: solid red 1px;
-    margin-bottom: 25px;
-    margin-left: 300px;
+	font-size: 70px;
+	background-color: black;
+	color: red;
+	width: 20%;
+	border: solid red 1px;
+	margin-bottom: 25px;
+	margin-left: 300px;
 }
 
 #displaytracker {
-    font-size: 30px;
-    background-color: black;
-    color: yellow;
-    border: solid yellow 1px;
-    width: 20%;
-    margin-bottom: 25px;
+	font-size: 30px;
+	background-color: black;
+	color: yellow;
+	border: solid yellow 1px;
+	width: 20%;
+	margin-bottom: 25px;
 }
 
 #playbutton {
-    font-size: 50px;
-    background-color: black;
-    color: yellow;
-    border: solid yellow 1px;
-    width: 20%;
-    margin-bottom: 25px;
-    cursor: pointer;
-    
+	font-size: 50px;
+	background-color: black;
+	color: yellow;
+	border: solid yellow 1px;
+	width: 20%;
+	margin-bottom: 25px;
+	cursor: pointer;
 }
 
 #playbutton:hover {
-    border: solid yellow 5px;
+	border: solid yellow 5px;
+}
+input:checked {
+	transform: scale(2);
+}
+
+input[type='radio'] {
+	display: none;
+}
+
+input:checked + img {
+	border: solid 5px hotpink;
+	border-radius: 5px;
+}
+
+#buttonReset {
+	font-size: 50px;
+	background-color: black;
+	color: yellow;
+	border: solid yellow 1px;
+	width: 20%;
+	margin-bottom: 25px;
+	cursor: pointer;
 }
